--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,3 +16,13 @@ sunshine-server = "src.server.mcp_server:main"
 
 [project.entry-points."fastmcp.servers"]
 sunshine = "src.server.mcp_server:mcp"
+
+[tool.uv]
+package = true
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src"]
